python_official_tutorial/chap4_3/part1.txt
(base) zcw@mukoedo1993:~$ python
Python 3.8.3 (default, Jul  2 2020, 16:21:59) 
[GCC 7.3.0] :: Anaconda, Inc. on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> for i in range(5):
...     print(i)
... 
0
1
2
3
4
>>> left-inclusive,right-exclusive and the third value is steps:
  File "<stdin>", line 1
    left-inclusive,right-exclusive and the third value is steps:
                                           ^
SyntaxError: invalid syntax
>>> # left-inclusive,right-exclusive and the third value is steps:
>>> range(5,10)
range(5, 10)
>>> print(range(5,10))
range(5, 10)
>>> for i in range(5,10):
...     print(i)
... 
5
6
7
8
9
>>> for i in range(0,10,3):
...  print(i)
... 
0
3
6
9
>>> for i in range(-10,-100,-30):
...     print(i)
... 
-10
-40
-70
>>> a=['ni', 'juu', 'yonn', 'sai', 'gaku', 'sei' ,'desu']
>>> for i in range(len(a)):
...     print(i,a[i])
... 
0 ni
1 juu
2 yonn
3 sai
4 gaku
5 sei
6 desu
>>> sum(range(4))
6
>>> list(range(4))
[0, 1, 2, 3]
>>> 
